#+TITLE: Guile-SSH News -- history of user-visible changes.
#+STARTUP: content hidestars

Copyright (C) Artyom V. Poptsov <poptsov.artyom@gmail.com>

  Copying and distribution of this file, with or without modification,
  are permitted in any medium without royalty provided the copyright
  notice and this notice are preserved.

* Unreleased
** API change
   Procedures were renamed:
   - 'dsv-string->list' was renamed to 'dsv-string->scm'.
   - 'list->dsv-string' was renamed to 'scm->dsv-string'.
   - 'dsv-read' was renamed to 'dsv->scm'.
   - 'dsv-write' was renamed to 'scm->dsv'.

   Also see the procedure-specific changes below.
** Add RFC 4180 parser
   Procedures now accept optional keyed argument called 'format' that allows
   to switch between the Unix-style DSV format and RFC 4180 (CSV) format.
** Procedures now throw 'dsv-parser-error' on an error
** 'dsv-string->scm' now returns a table
   The procedure now returns a table (a list of lists) in which every inlined
   list represents a row of the table.
** New 'set-debug!' procedure in (dsv)
   The procedure allows to enable or disable debugging traces.  The debug mode
   is disabled by default.
** 'dsv-string->scm' and 'dsv->scm' now ignoring backslash-escaped newlines
   when format is set to 'unix.
** 'dsv-string->scm' and 'dsv->scm' now accept 'comment-prefix'
   'comment-symbol' argument is renamed to 'commen-prefix' and expected to be
   a string instead of a char.
** 'scm->dsv' and 'scm->dsv-string' procedures add a line break
   The procedures now add a line break that is default for a specified format
   at the end of lines.
** 'guess-delimiter' in (dsv) now accepts optional 'known-delimiters' argument
   The argument can be used to privide the procedure with the list of
   delimiters to test to.
** Documentation update
    

* Changes in version 0.1.0 (2014-11-30)
** Release of the first version of Guile-DSV

Local Variables:
mode: org
End: